--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Deploy Angular app as static site to GitHub Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -30,6 +28,7 @@ jobs:
           node-version: "18"
       - run: npm install -g @angular/cli
       - run: npm install
+      - run: ng lint
       - run: ng build
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1.0.4
@@ -44,6 +43,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    if: success() && github.ref == 'refs/heads/main'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
