--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,10 @@ jobs:
           node-version: "18"
       - run: npm install -g @angular/cli
       - run: npm install
-      - run: ng lint
+      - name: run ESLint
+        run: ng lint
+      - name: Run Karma Tests
+        run: ng test
       - run: ng build
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1.0.8
