--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~5.1.4",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
     "angular-cli-ghpages": "^2.0.0",
     "eslint": "^8.57.0",
     "jasmine-core": "~5.1.2",
